--- a/styles/style.css
+++ b/styles/style.css
@@ -288,7 +288,6 @@ img {
       -ms-flex-align: center;
           align-items: center;
   padding: calc(2 * var(--padding)) 1.4286rem;
-  border-radius: 0.3571rem;
   background-color: #fff;
   -webkit-box-shadow: 0rem 0.2857rem 1.4286rem rgba(0, 0, 0, 0.08);
           box-shadow: 0rem 0.2857rem 1.4286rem rgba(0, 0, 0, 0.08);
@@ -868,6 +867,10 @@ img {
   margin-bottom: 7.1429rem;
 }
 
+.advantages-for-user .advantages__item {
+  border-radius: 0.3571rem;
+}
+
 .advantages__item.after-triangl {
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
@@ -1382,7 +1385,7 @@ label[for="menu-btn"] {
 
 @media (max-width: 1000px) {
   :root {
-    font-size: 0.8571rem;
+    font-size: 13px;
   }
   .work-time {
     -ms-grid-row: 1;
@@ -1418,7 +1421,7 @@ label[for="menu-btn"] {
     height: 3.2143rem;
   }
   .advantages__title {
-    font-size: 1.0714rem;
+    font-size: 1.1rem;
     line-height: 1.7rem;
   }
   .deal-direction__table {
@@ -1453,12 +1456,12 @@ label[for="menu-btn"] {
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 770px) {
   .advantages {
-    -ms-grid-columns: (minmax(7.1429rem, 10.7143rem))[2];
-        grid-template-columns: repeat(2, minmax(7.1429rem, 10.7143rem));
-    -ms-grid-rows: (minmax(7.1429rem, 10.7143rem))[2];
-        grid-template-rows: repeat(2, minmax(7.1429rem, 10.7143rem));
+    -ms-grid-columns: (minmax(7.1429rem, 12.7143rem))[2];
+        grid-template-columns: repeat(2, minmax(7.1429rem, 12.7143rem));
+    -ms-grid-rows: (minmax(7.1429rem, 12.7143rem))[2];
+        grid-template-rows: repeat(2, minmax(7.1429rem, 12.7143rem));
     top: -30rem;
   }
   .advantages__item {
@@ -1485,24 +1488,6 @@ label[for="menu-btn"] {
   .pagination-wrp {
     bottom: 3.3rem;
     left: 50%;
-  }
-  .partners-list {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-  }
-  .partners-list__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    min-width: 7.1429rem;
-    max-width: 9.2857rem;
-    margin: 0 0.7143rem 1.4286rem;
   }
   .offers-grid__item_width,
   .offers-grid {
@@ -1574,8 +1559,8 @@ label[for="menu-btn"] {
     max-width: unset;
     margin: 1.4286rem 0;
     padding: 10rem calc(2 * var(--padding)) 4.6429rem;
-    -webkit-box-shadow: 2rem 0rem 1.4286rem rgba(0, 0, 0, 0.08);
-            box-shadow: 2rem 0rem 1.4286rem rgba(0, 0, 0, 0.08);
+    -webkit-box-shadow: 0rem 2rem 1.4286rem -25px rgba(0, 0, 0, 0.08);
+            box-shadow: 0rem 2rem 1.4286rem -25px rgba(0, 0, 0, 0.08);
   }
   .partners-slider .slick-list {
     left: unset;
@@ -1589,6 +1574,24 @@ label[for="menu-btn"] {
   .slide-content .block-title {
     font-size: 2rem;
     padding-top: 5.7143rem;
+  }
+  .partners-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .partners-list__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    min-width: 7.1429rem;
+    max-width: 11rem;
+    margin: var(--gap) var(--padding) 0;
   }
   .give-wrp {
     -webkit-box-orient: vertical;
@@ -1620,10 +1623,20 @@ label[for="menu-btn"] {
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
   :root {
     --gap: 20px;
     --padding: 17px;
+  }
+  .slide-content {
+    max-width: 50%;
+  }
+  .advantages {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (minmax(6.1429rem, 1fr))[2];
+        grid-template-rows: repeat(2, minmax(6.1429rem, 1fr));
+    top: -25rem;
   }
   .site-logo {
     width: 12.8571rem;
@@ -1631,6 +1644,11 @@ label[for="menu-btn"] {
   }
   .hero-slider-slide {
     min-height: 43rem;
+  }
+  .deal-direction__table__item__info {
+    width: -webkit-min-content;
+    width: -moz-min-content;
+    width: min-content;
   }
   .second-line-nav,
   .first-line-nav {
@@ -1640,8 +1658,10 @@ label[for="menu-btn"] {
     font-size: 1.5714rem;
   }
   .advantages__title {
-    font-size: 1rem;
     min-height: unset;
+  }
+  .get-consult {
+    padding: calc(2 * var(--padding)) calc(1.2 * var(--padding));
   }
   .contacts-wrp,
   .office-position-wrp,
@@ -1659,6 +1679,18 @@ label[for="menu-btn"] {
   }
   .soc-links-list {
     margin: var(--gap) 0;
+  }
+}
+
+@media (max-width: 400px) {
+  .advantages__title {
+    font-size: 0.9rem;
+  }
+  .btns-partner-slider {
+    display: none;
+  }
+  .partners-btn {
+    margin-top: var(--padding);
   }
 }
 /*# sourceMappingURL=style.css.map */
