--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -8,8 +8,8 @@
 }
 @font-face {
   font-family: 'Lato-Bold';
-  src: url("../fonts/Lato-Bold.woff") format("woff"), 
-  url("../fonts/Lato-Bold.woff2") format("woff2");
+  src: url("../fonts/Lato-Semibold.woff") format("woff"), 
+  url("../fonts/Lato-Semibold.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
